--- a/src/app/contactmanager/components/sidenav/sidenav.component.html
+++ b/src/app/contactmanager/components/sidenav/sidenav.component.html
@@ -1,2 +1,19 @@
-<app-toolbar></app-toolbar>
-<router-outlet></router-outlet>
+<mat-sidenav-container class="app-sidenav-container">
+
+  <mat-sidenav #sidenav class="app-sidenav">
+    <mat-toolbar color="primary">Contacts</mat-toolbar>
+    <mat-list>
+      <mat-list-item>Item1</mat-list-item>
+      <mat-list-item>Item2</mat-list-item>
+      <mat-list-item>Item3</mat-list-item>
+    </mat-list>
+  </mat-sidenav>
+
+  <div class="app-sidenav-content">
+    <app-toolbar></app-toolbar>
+    <router-outlet></router-outlet>
+    <button type="button" mat-button (click)="sidenav.open()">
+      Open sidenav
+    </button>
+  </div>
+</mat-sidenav-container>
