--- a/src/app/contactmanager/components/sidenav/sidenav.component.html
+++ b/src/app/contactmanager/components/sidenav/sidenav.component.html
@@ -1,6 +1,8 @@
 <mat-sidenav-container class="app-sidenav-container">
 
-  <mat-sidenav #sidenav class="app-sidenav">
+  <mat-sidenav #sidenav class="app-sidenav mat-elevation-z10"
+               [opened]="!isScreenSmall()"
+               [mode]="isScreenSmall() ? 'over' : 'side'">
     <mat-toolbar color="primary">Contacts</mat-toolbar>
     <mat-list>
       <mat-list-item>Item1</mat-list-item>
@@ -10,10 +12,9 @@
   </mat-sidenav>
 
   <div class="app-sidenav-content">
-    <app-toolbar></app-toolbar>
-    <router-outlet></router-outlet>
-    <button type="button" mat-button (click)="sidenav.open()">
-      Open sidenav
-    </button>
+    <app-toolbar (toggleSidenav)="sidenav.toggle()"></app-toolbar>
+    <div class="wrapper">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </mat-sidenav-container>
