--- a/src/app/contactmanager/components/sidenav/sidenav.component.html
+++ b/src/app/contactmanager/components/sidenav/sidenav.component.html
@@ -4,11 +4,15 @@
                [opened]="!isScreenSmall()"
                [mode]="isScreenSmall() ? 'over' : 'side'">
     <mat-toolbar color="primary">Contacts</mat-toolbar>
-    <mat-list>
-      <mat-list-item>Item1</mat-list-item>
-      <mat-list-item>Item2</mat-list-item>
-      <mat-list-item>Item3</mat-list-item>
-    </mat-list>
+    <mat-nav-list>
+      <!--
+      async: because the list is loaded asynchronously, and we're binding to an observable
+      always use "async" when binding to an observable.
+      -->
+      <mat-list-item *ngFor="let user of users | async">
+        <a matLine href="#">{{ user.name }}</a>
+      </mat-list-item>
+    </mat-nav-list>
   </mat-sidenav>
 
   <div class="app-sidenav-content">
