--- a/src/app/contactmanager/components/sidenav/sidenav.component.html
+++ b/src/app/contactmanager/components/sidenav/sidenav.component.html
@@ -10,7 +10,9 @@
       always use "async" when binding to an observable.
       -->
       <mat-list-item *ngFor="let user of users | async">
-        <a matLine href="#">{{ user.name }}</a>
+        <a matLine href="#">
+          <mat-icon svgIcon="{{user.avatar}}"></mat-icon> {{ user.name }}
+        </a>
       </mat-list-item>
     </mat-nav-list>
   </mat-sidenav>
