add name/bio input files

--- a/src/app/contactmanager/components/new-contact-dialog/new-contact-dialog.component.html
+++ b/src/app/contactmanager/components/new-contact-dialog/new-contact-dialog.component.html
@@ -2,11 +2,11 @@
 <mat-dialog-content>
   <div class="example-container">
     <mat-form-field>
-      <input matInput placeholder="Input">
+      <input matInput placeholder="Name" [(ngModel)]="user.name" required>
     </mat-form-field>
 
     <mat-form-field>
-      <textarea matInput placeholder="Textarea"></textarea>
+      <textarea matInput placeholder="Bio" [(ngModel)]="user.bio"></textarea>
     </mat-form-field>
 
     <mat-form-field>
