--- a/src/app/contactmanager/components/new-contact-dialog/new-contact-dialog.component.html
+++ b/src/app/contactmanager/components/new-contact-dialog/new-contact-dialog.component.html
@@ -1,19 +1,28 @@
 <h2 mat-dialog-title>Add new contact</h2>
 <mat-dialog-content>
   <div class="example-container">
+    <!--Avatar-->
+    <mat-form-field>
+      <mat-select placeholder="Avatar" [(ngModel)]="user.avatar">
+        <mat-select-trigger>
+          <mat-icon svgIcon="{{user.avatar}}"></mat-icon> {{user.avatar}}
+        </mat-select-trigger>
+        <mat-option *ngFor="let avatar of avatars" [value]="avatar">
+          <mat-icon svgIcon="{{avatar}}"></mat-icon> {{avatar}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+
+    <!--Name-->
     <mat-form-field>
       <input matInput placeholder="Name" [(ngModel)]="user.name" required>
     </mat-form-field>
 
+    <!--Bio-->
     <mat-form-field>
       <textarea matInput placeholder="Bio" [(ngModel)]="user.bio"></textarea>
     </mat-form-field>
 
-    <mat-form-field>
-      <mat-select placeholder="Select">
-        <mat-option value="option">Option</mat-option>
-      </mat-select>
-    </mat-form-field>
   </div>
 </mat-dialog-content>
 <mat-dialog-actions>
