--- a/src/app/contactmanager/components/sidenav/sidenav.component.html
+++ b/src/app/contactmanager/components/sidenav/sidenav.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container class="app-sidenav-container" [class.dark-theme]="isDarkTheme">
+<mat-sidenav-container class="app-sidenav-container" [class.dark-theme]="isDarkTheme" [dir]="dir">
 
   <mat-sidenav #sidenav class="app-sidenav mat-elevation-z10"
                [opened]="!isScreenSmall()"
@@ -19,7 +19,8 @@
 
   <div class="app-sidenav-content">
     <app-toolbar (toggleSidenav)="sidenav.toggle()"
-                 (toggleTheme)="toggleTheme()">
+                 (toggleTheme)="toggleTheme()"
+                  (toggleDirection)="toggleDirection()">
     </app-toolbar>
     <div class="wrapper">
       <router-outlet></router-outlet>
